--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 <body>
     <div id = "root">
     </div>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.development.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.development.js"></script>
-
-    <script src = "App.js"></script>
+    <script src = "App.js" type="module"></script>
 </body>
 </html>
